--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-  <img src="images/image-qr-code.png" width="300">
+  <img src="image-qr-code.png" width="300">
   <div class="description"> <p><b>Improve your front-end skills by building projects</b>
 </p>
 <p>Scan the QR to visit Frontend Mentor and take your coding skills to the next level</p></div>
